--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <model-viewer
-      src="https://raw.githubusercontent.com/yuhao0608dOUOb/chemical_3D/main/C01_cyclopropane.glb"
+      src="https://raw.githubusercontent.com/yuhao0608dOUOb/chemical_C03_3D/main/C03_methylcyclopropane.FBX"
       alt="Cyclopropane 3D 分子模型"
       auto-rotate
       camera-controls
@@ -38,6 +38,7 @@
     </model-viewer>
   </body>
 </html>
+
 
 
 
