--- a/index.html
+++ b/index.html
@@ -3,43 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <title>3D Cyclopropane 模型展示</title>
+
+    <!-- model-viewer 套件 -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
     <style>
       body {
         margin: 0;
         padding: 0;
-        background-color: #f0f0f0;
+        background-color: #000000; /* 黑色背景 */
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
       }
+
       model-viewer {
         width: 90vw;
         height: 90vh;
-        background-color: #ffffff;
-        border: 1px solid #ccc;
+        background-color: #000000; /* model-viewer 背景改黑色 */
+        border: 1px solid #333;
         border-radius: 8px;
       }
     </style>
   </head>
+
   <body>
     <model-viewer
-      src="https://raw.githubusercontent.com/yuhao0608dOUOb/chemical_C03_3D/main/C03_methylcyclopropane.glb"
+      src="https://raw.githubusercontent.com/yuhao0608dOUOb/chemical_3D/main/C01_cyclopropane.glb"
       alt="Cyclopropane 3D 分子模型"
-      auto-rotate
       camera-controls
       shadow-intensity="1"
-      exposure="1"
-      environment-image="neutral"
+      exposure="1.5"
+      environment-image="https://modelviewer.dev/shared-assets/environments/neutral.hdr"
       ar
       ar-modes="webxr scene-viewer quick-look"
     >
     </model-viewer>
   </body>
 </html>
-
-
-
-
-
